<resources>
    <string name="app_name">Automobile Maintenance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setup">setup</string>
    <string name="title_activity_automain">maintenance</string>
    <string name="title_activity_remainder">reminder</string>
    <string name="title_activity_quickdial">quickdial</string>

    <string name="make_text">Make:</string>
    <string name="model_text">Model:</string>
    <string name="year_text">Year:</string>

    <string name="Reminder_text">Reminder</string>
    <string name="Reminder_save">Save</string>
    <string name="Reminder_instruct">Please select a date and then enter a description for your reminder.  You will be prompted with you reminder on the date that you set.</string>
    <string name="button_text">Download Image</string>

</resources>
