<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="com.example.litianyu.automobilemaintenance.setupFragment">


        <TextView
            android:id="@+id/make"
            android:text="@string/make_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"

            />


        <EditText
            android:id="@+id/submit_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/make"
            android:paddingRight="30dp"
            android:paddingTop="30dp"
            />

        <TextView
            android:id="@+id/model"
            android:text="@string/model_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/make"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"
            />

    <EditText
        android:id="@+id/submit_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/model"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
        />


        <TextView
            android:id="@+id/year"
            android:text="@string/year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/model"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp"/>






</RelativeLayout>
