<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ndroid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.litianyu.automobilemaintenance.remainderFragment">

    <TextView android:text="@string/Reminder_text" android:layout_width="wrap_content"
        android:id="@+id/tv1"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv1"
        android:layout_marginBottom="30dp"
        android:background="#ffcae2ff"
        android:calendarViewShown="false" />

    <TextView android:text="@string/Reminder_text" android:layout_width="wrap_content"
        android:id="@+id/label1"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/datePicker1"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/desc_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="20"
        android:minLines="20"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:layout_below="@+id/label1"
        android:singleLine="false"
        android:gravity="top"
        android:background="#ffcae2ff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reminder_save"
        android:id="@+id/button2"
        android:textSize="34sp"
        android:layout_below="@+id/desc_edittext"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/Reminder_instruct" android:layout_width="wrap_content"
        android:id="@+id/label2"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:layout_height="wrap_content" />

</RelativeLayout>
